# bmo_ws

./: .gitignore  CLAUDE.md  README.md  VALIDATION.md  run_bmo.sh
src/bmo_control/: package.xml  setup.cfg  setup.py
src/bmo_control/bmo_control/: bmo_coordinator_node.py  bmo_core.py
src/bmo_control/config/: bmo_params.yaml
src/bmo_control/launch/: bmo_control.launch.py
src/bmo_control/test/: test_bmo_core.py
src/bmo_gz_plugins/: CMakeLists.txt  package.xml
src/bmo_gz_plugins/include/bmo_gz_plugins/: light_intensity_sensor.hpp
src/bmo_gz_plugins/src/: light_intensity_sensor.cpp
src/bmo_sim/: CMakeLists.txt  package.xml
src/bmo_sim/config/: bmo_bridge.yaml
src/bmo_sim/launch/: bmo_simulation.launch.py
src/bmo_sim/models/cf0/: model.config  model.sdf
src/bmo_sim/models/cf1/: model.config  model.sdf
src/bmo_sim/models/cf2/: model.config  model.sdf
src/bmo_sim/models/cf3/: model.config  model.sdf
src/bmo_sim/models/crazyflie_bmo/: meshes  model.config  model.sdf
src/bmo_sim/models/tungsten_lamp/: model.config  model.sdf
src/bmo_sim/rviz/: bmo_swarm.rviz
src/bmo_sim/worlds/: center_source_world.sdf  single_source_world.sdf
